--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # Compiled class file
 *.class
+*/target
+*.iml
+/.idea
+target/
+.project
+.settings/
+.classpath
 
 # Log file
 *.log
@@ -21,3 +28,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
