--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,47 @@
   <version>1.0-SNAPSHOT</version>
   <name>sandoftime</name>
   <url>http://maven.apache.org</url>
+
+  <modules>
+    <module>time_web</module>
+    <module>time_core</module>
+  </modules>
+
+  <properties>
+    <swagger2.version>2.7.0</swagger2.version>
+    <mybatis-plus.version>2.1.9</mybatis-plus.version><!--2.1.9 -->
+    <mybatis-plus.velocity-engine.version>2.0</mybatis-plus.velocity-engine.version>
+    <mybatis-baomidou.version>1.0.5</mybatis-baomidou.version>
+    <mybatis.spring.boot.version>1.3.1</mybatis.spring.boot.version>
+    <mysql.version>8.0.11</mysql.version>
+      <us.codecraft.version>0.7.3</us.codecraft.version>
+  </properties>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.0.1.RELEASE</version>
+    <relativePath/>
+  </parent>
+
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <modules>
-    <module>time_web</module>
-  </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
